add connection strings

--- a/PruebaFacturacion/Facturacion/Facturacion.csproj
+++ b/PruebaFacturacion/Facturacion/Facturacion.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\PruebaFacturacion\FacturacionDatos\FacturacionDatos.csproj" />
     <ProjectReference Include="..\..\..\..\PruebaFacturacion\FacturacionEntidades\FacturacionEntidades.csproj" />
   </ItemGroup>
 
