--- a/PruebaFacturacion/Facturacion/appsettings.json
+++ b/PruebaFacturacion/Facturacion/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "DefaultConection": "Data Source=LAPTOP-OGD2B1NA\\SQLEXPRESS; Initial Catalog=PruebaFacturacion; Integrated Security=True"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
